tests/build/cases/ui_node/invalid_delegate_iter_pair.stderr
error: expected `, delegate_iter_mut = <expr>`
 --> cases/ui_node/invalid_delegate_iter_pair.rs:6:42
  |
6 | #[ui_node(delegate_iter = self.inner.iter())]
  |                                          ^^

error: expected `, delegate_iter = <expr>`
  --> cases/ui_node/invalid_delegate_iter_pair.rs:12:50
   |
12 | #[ui_node(delegate_iter_mut = self.inner.iter_mut())]
   |                                                  ^^

warning: unused import: `UiNode`
 --> cases/ui_node/invalid_delegate_iter_pair.rs:1:50
  |
1 | use zero_ui::core::{ui_list::WidgetVec, ui_node, UiNode};
  |                                                  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
